hw3/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> stmt_list
Rule 2     stmt_list -> stmt SEMICOLON stmt_list
Rule 3     stmt_list -> stmt
Rule 4     stmt -> assign_stmt
Rule 5     stmt -> while_stmt
Rule 6     stmt -> if_stmt
Rule 7     expr -> expr PLUS term
Rule 8     expr -> expr MINUS term
Rule 9     expr_list -> expr COMMA expr_list
Rule 10    expr_list -> expr
Rule 11    expr -> term
Rule 12    term -> term TIMES fact
Rule 13    term -> fact
Rule 14    fact -> LPAREN expr RPAREN
Rule 15    fact -> NUMBER
Rule 16    fact -> d_ident
Rule 17    fact -> func_call
Rule 18    assign_stmt -> IDENT ASSIGNOP expr
Rule 19    while_stmt -> WHILE expr DO stmt_list OD
Rule 20    if_stmt -> IF expr THEN stmt_list ELSE stmt_list FI
Rule 21    func_call -> IDENT LPAREN expr_list RPAREN
Rule 22    d_ident -> IDENT
Rule 23    expr -> expr CONCAT list
Rule 24    expr -> expr CONCAT d_ident
Rule 25    list -> LSQUARE sequence RSQUARE
Rule 26    list -> LSQUARE RSQUARE
Rule 27    sequence -> list_element COMMA sequence
Rule 28    sequence -> list_element
Rule 29    list_element -> expr
Rule 30    expr -> list
Rule 31    func_call -> CONS LPAREN expr COMMA expr RPAREN
Rule 32    func_call -> CAR LPAREN expr RPAREN
Rule 33    func_call -> CDR LPAREN expr RPAREN
Rule 34    func_call -> NULLP LPAREN expr RPAREN
Rule 35    func_call -> INTP LPAREN expr RPAREN
Rule 36    func_call -> LISTP LPAREN expr RPAREN

Terminals, with rules where they appear

ASSIGNOP             : 18
CAR                  : 32
CDR                  : 33
COMMA                : 9 27 31
CONCAT               : 23 24
CONS                 : 31
DO                   : 19
ELSE                 : 20
FI                   : 20
IDENT                : 18 21 22
IF                   : 20
INTP                 : 35
LISTP                : 36
LPAREN               : 14 21 31 32 33 34 35 36
LSQUARE              : 25 26
MINUS                : 8
NULLP                : 34
NUMBER               : 15
OD                   : 19
PLUS                 : 7
RPAREN               : 14 21 31 32 33 34 35 36
RSQUARE              : 25 26
SEMICOLON            : 2
THEN                 : 20
TIMES                : 12
WHILE                : 19
error                : 

Nonterminals, with rules where they appear

assign_stmt          : 4
d_ident              : 16 24
expr                 : 7 8 9 10 14 18 19 20 23 24 29 31 31 32 33 34 35 36
expr_list            : 9 21
fact                 : 12 13
func_call            : 17
if_stmt              : 6
list                 : 23 30
list_element         : 27 28
program              : 0
sequence             : 25 27
stmt                 : 2 3
stmt_list            : 1 2 19 20 20
term                 : 7 8 11 12
while_stmt           : 5

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . stmt_list
    (2) stmt_list -> . stmt SEMICOLON stmt_list
    (3) stmt_list -> . stmt
    (4) stmt -> . assign_stmt
    (5) stmt -> . while_stmt
    (6) stmt -> . if_stmt
    (18) assign_stmt -> . IDENT ASSIGNOP expr
    (19) while_stmt -> . WHILE expr DO stmt_list OD
    (20) if_stmt -> . IF expr THEN stmt_list ELSE stmt_list FI

    IDENT           shift and go to state 2
    WHILE           shift and go to state 4
    IF              shift and go to state 9

    stmt_list                      shift and go to state 1
    if_stmt                        shift and go to state 3
    stmt                           shift and go to state 5
    assign_stmt                    shift and go to state 6
    while_stmt                     shift and go to state 7
    program                        shift and go to state 8

state 1

    (1) program -> stmt_list .

    $end            reduce using rule 1 (program -> stmt_list .)


state 2

    (18) assign_stmt -> IDENT . ASSIGNOP expr

    ASSIGNOP        shift and go to state 10


state 3

    (6) stmt -> if_stmt .

    SEMICOLON       reduce using rule 6 (stmt -> if_stmt .)
    ELSE            reduce using rule 6 (stmt -> if_stmt .)
    OD              reduce using rule 6 (stmt -> if_stmt .)
    FI              reduce using rule 6 (stmt -> if_stmt .)
    $end            reduce using rule 6 (stmt -> if_stmt .)


state 4

    (19) while_stmt -> WHILE . expr DO stmt_list OD
    (7) expr -> . expr PLUS term
    (8) expr -> . expr MINUS term
    (11) expr -> . term
    (23) expr -> . expr CONCAT list
    (24) expr -> . expr CONCAT d_ident
    (30) expr -> . list
    (12) term -> . term TIMES fact
    (13) term -> . fact
    (25) list -> . LSQUARE sequence RSQUARE
    (26) list -> . LSQUARE RSQUARE
    (14) fact -> . LPAREN expr RPAREN
    (15) fact -> . NUMBER
    (16) fact -> . d_ident
    (17) fact -> . func_call
    (22) d_ident -> . IDENT
    (21) func_call -> . IDENT LPAREN expr_list RPAREN
    (31) func_call -> . CONS LPAREN expr COMMA expr RPAREN
    (32) func_call -> . CAR LPAREN expr RPAREN
    (33) func_call -> . CDR LPAREN expr RPAREN
    (34) func_call -> . NULLP LPAREN expr RPAREN
    (35) func_call -> . INTP LPAREN expr RPAREN
    (36) func_call -> . LISTP LPAREN expr RPAREN

    LSQUARE         shift and go to state 12
    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 13
    IDENT           shift and go to state 16
    CONS            shift and go to state 11
    CAR             shift and go to state 14
    CDR             shift and go to state 24
    NULLP           shift and go to state 17
    INTP            shift and go to state 18
    LISTP           shift and go to state 23

    func_call                      shift and go to state 15
    term                           shift and go to state 20
    expr                           shift and go to state 21
    list                           shift and go to state 22
    d_ident                        shift and go to state 25
    fact                           shift and go to state 26

state 5

    (2) stmt_list -> stmt . SEMICOLON stmt_list
    (3) stmt_list -> stmt .

    SEMICOLON       shift and go to state 27
    $end            reduce using rule 3 (stmt_list -> stmt .)
    OD              reduce using rule 3 (stmt_list -> stmt .)
    ELSE            reduce using rule 3 (stmt_list -> stmt .)
    FI              reduce using rule 3 (stmt_list -> stmt .)


state 6

    (4) stmt -> assign_stmt .

    SEMICOLON       reduce using rule 4 (stmt -> assign_stmt .)
    ELSE            reduce using rule 4 (stmt -> assign_stmt .)
    OD              reduce using rule 4 (stmt -> assign_stmt .)
    FI              reduce using rule 4 (stmt -> assign_stmt .)
    $end            reduce using rule 4 (stmt -> assign_stmt .)


state 7

    (5) stmt -> while_stmt .

    SEMICOLON       reduce using rule 5 (stmt -> while_stmt .)
    ELSE            reduce using rule 5 (stmt -> while_stmt .)
    OD              reduce using rule 5 (stmt -> while_stmt .)
    FI              reduce using rule 5 (stmt -> while_stmt .)
    $end            reduce using rule 5 (stmt -> while_stmt .)


state 8

    (0) S' -> program .



state 9

    (20) if_stmt -> IF . expr THEN stmt_list ELSE stmt_list FI
    (7) expr -> . expr PLUS term
    (8) expr -> . expr MINUS term
    (11) expr -> . term
    (23) expr -> . expr CONCAT list
    (24) expr -> . expr CONCAT d_ident
    (30) expr -> . list
    (12) term -> . term TIMES fact
    (13) term -> . fact
    (25) list -> . LSQUARE sequence RSQUARE
    (26) list -> . LSQUARE RSQUARE
    (14) fact -> . LPAREN expr RPAREN
    (15) fact -> . NUMBER
    (16) fact -> . d_ident
    (17) fact -> . func_call
    (22) d_ident -> . IDENT
    (21) func_call -> . IDENT LPAREN expr_list RPAREN
    (31) func_call -> . CONS LPAREN expr COMMA expr RPAREN
    (32) func_call -> . CAR LPAREN expr RPAREN
    (33) func_call -> . CDR LPAREN expr RPAREN
    (34) func_call -> . NULLP LPAREN expr RPAREN
    (35) func_call -> . INTP LPAREN expr RPAREN
    (36) func_call -> . LISTP LPAREN expr RPAREN

    LSQUARE         shift and go to state 12
    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 13
    IDENT           shift and go to state 16
    CONS            shift and go to state 11
    CAR             shift and go to state 14
    CDR             shift and go to state 24
    NULLP           shift and go to state 17
    INTP            shift and go to state 18
    LISTP           shift and go to state 23

    func_call                      shift and go to state 15
    term                           shift and go to state 20
    expr                           shift and go to state 28
    list                           shift and go to state 22
    d_ident                        shift and go to state 25
    fact                           shift and go to state 26

state 10

    (18) assign_stmt -> IDENT ASSIGNOP . expr
    (7) expr -> . expr PLUS term
    (8) expr -> . expr MINUS term
    (11) expr -> . term
    (23) expr -> . expr CONCAT list
    (24) expr -> . expr CONCAT d_ident
    (30) expr -> . list
    (12) term -> . term TIMES fact
    (13) term -> . fact
    (25) list -> . LSQUARE sequence RSQUARE
    (26) list -> . LSQUARE RSQUARE
    (14) fact -> . LPAREN expr RPAREN
    (15) fact -> . NUMBER
    (16) fact -> . d_ident
    (17) fact -> . func_call
    (22) d_ident -> . IDENT
    (21) func_call -> . IDENT LPAREN expr_list RPAREN
    (31) func_call -> . CONS LPAREN expr COMMA expr RPAREN
    (32) func_call -> . CAR LPAREN expr RPAREN
    (33) func_call -> . CDR LPAREN expr RPAREN
    (34) func_call -> . NULLP LPAREN expr RPAREN
    (35) func_call -> . INTP LPAREN expr RPAREN
    (36) func_call -> . LISTP LPAREN expr RPAREN

    LSQUARE         shift and go to state 12
    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 13
    IDENT           shift and go to state 16
    CONS            shift and go to state 11
    CAR             shift and go to state 14
    CDR             shift and go to state 24
    NULLP           shift and go to state 17
    INTP            shift and go to state 18
    LISTP           shift and go to state 23

    func_call                      shift and go to state 15
    term                           shift and go to state 20
    expr                           shift and go to state 29
    list                           shift and go to state 22
    d_ident                        shift and go to state 25
    fact                           shift and go to state 26

state 11

    (31) func_call -> CONS . LPAREN expr COMMA expr RPAREN

    LPAREN          shift and go to state 30


state 12

    (25) list -> LSQUARE . sequence RSQUARE
    (26) list -> LSQUARE . RSQUARE
    (27) sequence -> . list_element COMMA sequence
    (28) sequence -> . list_element
    (29) list_element -> . expr
    (7) expr -> . expr PLUS term
    (8) expr -> . expr MINUS term
    (11) expr -> . term
    (23) expr -> . expr CONCAT list
    (24) expr -> . expr CONCAT d_ident
    (30) expr -> . list
    (12) term -> . term TIMES fact
    (13) term -> . fact
    (25) list -> . LSQUARE sequence RSQUARE
    (26) list -> . LSQUARE RSQUARE
    (14) fact -> . LPAREN expr RPAREN
    (15) fact -> . NUMBER
    (16) fact -> . d_ident
    (17) fact -> . func_call
    (22) d_ident -> . IDENT
    (21) func_call -> . IDENT LPAREN expr_list RPAREN
    (31) func_call -> . CONS LPAREN expr COMMA expr RPAREN
    (32) func_call -> . CAR LPAREN expr RPAREN
    (33) func_call -> . CDR LPAREN expr RPAREN
    (34) func_call -> . NULLP LPAREN expr RPAREN
    (35) func_call -> . INTP LPAREN expr RPAREN
    (36) func_call -> . LISTP LPAREN expr RPAREN

    RSQUARE         shift and go to state 32
    LSQUARE         shift and go to state 12
    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 13
    IDENT           shift and go to state 16
    CONS            shift and go to state 11
    CAR             shift and go to state 14
    CDR             shift and go to state 24
    NULLP           shift and go to state 17
    INTP            shift and go to state 18
    LISTP           shift and go to state 23

    func_call                      shift and go to state 15
    list_element                   shift and go to state 33
    term                           shift and go to state 20
    sequence                       shift and go to state 31
    expr                           shift and go to state 34
    list                           shift and go to state 22
    d_ident                        shift and go to state 25
    fact                           shift and go to state 26

state 13

    (15) fact -> NUMBER .

    TIMES           reduce using rule 15 (fact -> NUMBER .)
    RPAREN          reduce using rule 15 (fact -> NUMBER .)
    PLUS            reduce using rule 15 (fact -> NUMBER .)
    MINUS           reduce using rule 15 (fact -> NUMBER .)
    CONCAT          reduce using rule 15 (fact -> NUMBER .)
    THEN            reduce using rule 15 (fact -> NUMBER .)
    DO              reduce using rule 15 (fact -> NUMBER .)
    SEMICOLON       reduce using rule 15 (fact -> NUMBER .)
    $end            reduce using rule 15 (fact -> NUMBER .)
    OD              reduce using rule 15 (fact -> NUMBER .)
    ELSE            reduce using rule 15 (fact -> NUMBER .)
    FI              reduce using rule 15 (fact -> NUMBER .)
    COMMA           reduce using rule 15 (fact -> NUMBER .)
    RSQUARE         reduce using rule 15 (fact -> NUMBER .)


state 14

    (32) func_call -> CAR . LPAREN expr RPAREN

    LPAREN          shift and go to state 35


state 15

    (17) fact -> func_call .

    TIMES           reduce using rule 17 (fact -> func_call .)
    RPAREN          reduce using rule 17 (fact -> func_call .)
    PLUS            reduce using rule 17 (fact -> func_call .)
    MINUS           reduce using rule 17 (fact -> func_call .)
    CONCAT          reduce using rule 17 (fact -> func_call .)
    THEN            reduce using rule 17 (fact -> func_call .)
    DO              reduce using rule 17 (fact -> func_call .)
    SEMICOLON       reduce using rule 17 (fact -> func_call .)
    $end            reduce using rule 17 (fact -> func_call .)
    OD              reduce using rule 17 (fact -> func_call .)
    ELSE            reduce using rule 17 (fact -> func_call .)
    FI              reduce using rule 17 (fact -> func_call .)
    COMMA           reduce using rule 17 (fact -> func_call .)
    RSQUARE         reduce using rule 17 (fact -> func_call .)


state 16

    (22) d_ident -> IDENT .
    (21) func_call -> IDENT . LPAREN expr_list RPAREN

    TIMES           reduce using rule 22 (d_ident -> IDENT .)
    COMMA           reduce using rule 22 (d_ident -> IDENT .)
    PLUS            reduce using rule 22 (d_ident -> IDENT .)
    MINUS           reduce using rule 22 (d_ident -> IDENT .)
    CONCAT          reduce using rule 22 (d_ident -> IDENT .)
    RPAREN          reduce using rule 22 (d_ident -> IDENT .)
    RSQUARE         reduce using rule 22 (d_ident -> IDENT .)
    DO              reduce using rule 22 (d_ident -> IDENT .)
    THEN            reduce using rule 22 (d_ident -> IDENT .)
    SEMICOLON       reduce using rule 22 (d_ident -> IDENT .)
    $end            reduce using rule 22 (d_ident -> IDENT .)
    OD              reduce using rule 22 (d_ident -> IDENT .)
    ELSE            reduce using rule 22 (d_ident -> IDENT .)
    FI              reduce using rule 22 (d_ident -> IDENT .)
    LPAREN          shift and go to state 36


state 17

    (34) func_call -> NULLP . LPAREN expr RPAREN

    LPAREN          shift and go to state 37


state 18

    (35) func_call -> INTP . LPAREN expr RPAREN

    LPAREN          shift and go to state 38


state 19

    (14) fact -> LPAREN . expr RPAREN
    (7) expr -> . expr PLUS term
    (8) expr -> . expr MINUS term
    (11) expr -> . term
    (23) expr -> . expr CONCAT list
    (24) expr -> . expr CONCAT d_ident
    (30) expr -> . list
    (12) term -> . term TIMES fact
    (13) term -> . fact
    (25) list -> . LSQUARE sequence RSQUARE
    (26) list -> . LSQUARE RSQUARE
    (14) fact -> . LPAREN expr RPAREN
    (15) fact -> . NUMBER
    (16) fact -> . d_ident
    (17) fact -> . func_call
    (22) d_ident -> . IDENT
    (21) func_call -> . IDENT LPAREN expr_list RPAREN
    (31) func_call -> . CONS LPAREN expr COMMA expr RPAREN
    (32) func_call -> . CAR LPAREN expr RPAREN
    (33) func_call -> . CDR LPAREN expr RPAREN
    (34) func_call -> . NULLP LPAREN expr RPAREN
    (35) func_call -> . INTP LPAREN expr RPAREN
    (36) func_call -> . LISTP LPAREN expr RPAREN

    LSQUARE         shift and go to state 12
    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 13
    IDENT           shift and go to state 16
    CONS            shift and go to state 11
    CAR             shift and go to state 14
    CDR             shift and go to state 24
    NULLP           shift and go to state 17
    INTP            shift and go to state 18
    LISTP           shift and go to state 23

    func_call                      shift and go to state 15
    term                           shift and go to state 20
    expr                           shift and go to state 39
    list                           shift and go to state 22
    d_ident                        shift and go to state 25
    fact                           shift and go to state 26

state 20

    (11) expr -> term .
    (12) term -> term . TIMES fact

    RPAREN          reduce using rule 11 (expr -> term .)
    PLUS            reduce using rule 11 (expr -> term .)
    MINUS           reduce using rule 11 (expr -> term .)
    CONCAT          reduce using rule 11 (expr -> term .)
    SEMICOLON       reduce using rule 11 (expr -> term .)
    $end            reduce using rule 11 (expr -> term .)
    OD              reduce using rule 11 (expr -> term .)
    ELSE            reduce using rule 11 (expr -> term .)
    FI              reduce using rule 11 (expr -> term .)
    COMMA           reduce using rule 11 (expr -> term .)
    THEN            reduce using rule 11 (expr -> term .)
    RSQUARE         reduce using rule 11 (expr -> term .)
    DO              reduce using rule 11 (expr -> term .)
    TIMES           shift and go to state 40


state 21

    (19) while_stmt -> WHILE expr . DO stmt_list OD
    (7) expr -> expr . PLUS term
    (8) expr -> expr . MINUS term
    (23) expr -> expr . CONCAT list
    (24) expr -> expr . CONCAT d_ident

    DO              shift and go to state 41
    PLUS            shift and go to state 42
    MINUS           shift and go to state 43
    CONCAT          shift and go to state 44


state 22

    (30) expr -> list .

    RPAREN          reduce using rule 30 (expr -> list .)
    PLUS            reduce using rule 30 (expr -> list .)
    MINUS           reduce using rule 30 (expr -> list .)
    CONCAT          reduce using rule 30 (expr -> list .)
    SEMICOLON       reduce using rule 30 (expr -> list .)
    $end            reduce using rule 30 (expr -> list .)
    OD              reduce using rule 30 (expr -> list .)
    ELSE            reduce using rule 30 (expr -> list .)
    FI              reduce using rule 30 (expr -> list .)
    COMMA           reduce using rule 30 (expr -> list .)
    THEN            reduce using rule 30 (expr -> list .)
    RSQUARE         reduce using rule 30 (expr -> list .)
    DO              reduce using rule 30 (expr -> list .)


state 23

    (36) func_call -> LISTP . LPAREN expr RPAREN

    LPAREN          shift and go to state 45


state 24

    (33) func_call -> CDR . LPAREN expr RPAREN

    LPAREN          shift and go to state 46


state 25

    (16) fact -> d_ident .

    TIMES           reduce using rule 16 (fact -> d_ident .)
    RPAREN          reduce using rule 16 (fact -> d_ident .)
    PLUS            reduce using rule 16 (fact -> d_ident .)
    MINUS           reduce using rule 16 (fact -> d_ident .)
    CONCAT          reduce using rule 16 (fact -> d_ident .)
    THEN            reduce using rule 16 (fact -> d_ident .)
    DO              reduce using rule 16 (fact -> d_ident .)
    SEMICOLON       reduce using rule 16 (fact -> d_ident .)
    $end            reduce using rule 16 (fact -> d_ident .)
    OD              reduce using rule 16 (fact -> d_ident .)
    ELSE            reduce using rule 16 (fact -> d_ident .)
    FI              reduce using rule 16 (fact -> d_ident .)
    COMMA           reduce using rule 16 (fact -> d_ident .)
    RSQUARE         reduce using rule 16 (fact -> d_ident .)


state 26

    (13) term -> fact .

    TIMES           reduce using rule 13 (term -> fact .)
    RPAREN          reduce using rule 13 (term -> fact .)
    PLUS            reduce using rule 13 (term -> fact .)
    MINUS           reduce using rule 13 (term -> fact .)
    CONCAT          reduce using rule 13 (term -> fact .)
    DO              reduce using rule 13 (term -> fact .)
    THEN            reduce using rule 13 (term -> fact .)
    SEMICOLON       reduce using rule 13 (term -> fact .)
    $end            reduce using rule 13 (term -> fact .)
    OD              reduce using rule 13 (term -> fact .)
    ELSE            reduce using rule 13 (term -> fact .)
    FI              reduce using rule 13 (term -> fact .)
    COMMA           reduce using rule 13 (term -> fact .)
    RSQUARE         reduce using rule 13 (term -> fact .)


state 27

    (2) stmt_list -> stmt SEMICOLON . stmt_list
    (2) stmt_list -> . stmt SEMICOLON stmt_list
    (3) stmt_list -> . stmt
    (4) stmt -> . assign_stmt
    (5) stmt -> . while_stmt
    (6) stmt -> . if_stmt
    (18) assign_stmt -> . IDENT ASSIGNOP expr
    (19) while_stmt -> . WHILE expr DO stmt_list OD
    (20) if_stmt -> . IF expr THEN stmt_list ELSE stmt_list FI

    IDENT           shift and go to state 2
    WHILE           shift and go to state 4
    IF              shift and go to state 9

    stmt_list                      shift and go to state 47
    if_stmt                        shift and go to state 3
    stmt                           shift and go to state 5
    assign_stmt                    shift and go to state 6
    while_stmt                     shift and go to state 7

state 28

    (20) if_stmt -> IF expr . THEN stmt_list ELSE stmt_list FI
    (7) expr -> expr . PLUS term
    (8) expr -> expr . MINUS term
    (23) expr -> expr . CONCAT list
    (24) expr -> expr . CONCAT d_ident

    THEN            shift and go to state 48
    PLUS            shift and go to state 42
    MINUS           shift and go to state 43
    CONCAT          shift and go to state 44


state 29

    (18) assign_stmt -> IDENT ASSIGNOP expr .
    (7) expr -> expr . PLUS term
    (8) expr -> expr . MINUS term
    (23) expr -> expr . CONCAT list
    (24) expr -> expr . CONCAT d_ident

    SEMICOLON       reduce using rule 18 (assign_stmt -> IDENT ASSIGNOP expr .)
    $end            reduce using rule 18 (assign_stmt -> IDENT ASSIGNOP expr .)
    OD              reduce using rule 18 (assign_stmt -> IDENT ASSIGNOP expr .)
    ELSE            reduce using rule 18 (assign_stmt -> IDENT ASSIGNOP expr .)
    FI              reduce using rule 18 (assign_stmt -> IDENT ASSIGNOP expr .)
    PLUS            shift and go to state 42
    MINUS           shift and go to state 43
    CONCAT          shift and go to state 44


state 30

    (31) func_call -> CONS LPAREN . expr COMMA expr RPAREN
    (7) expr -> . expr PLUS term
    (8) expr -> . expr MINUS term
    (11) expr -> . term
    (23) expr -> . expr CONCAT list
    (24) expr -> . expr CONCAT d_ident
    (30) expr -> . list
    (12) term -> . term TIMES fact
    (13) term -> . fact
    (25) list -> . LSQUARE sequence RSQUARE
    (26) list -> . LSQUARE RSQUARE
    (14) fact -> . LPAREN expr RPAREN
    (15) fact -> . NUMBER
    (16) fact -> . d_ident
    (17) fact -> . func_call
    (22) d_ident -> . IDENT
    (21) func_call -> . IDENT LPAREN expr_list RPAREN
    (31) func_call -> . CONS LPAREN expr COMMA expr RPAREN
    (32) func_call -> . CAR LPAREN expr RPAREN
    (33) func_call -> . CDR LPAREN expr RPAREN
    (34) func_call -> . NULLP LPAREN expr RPAREN
    (35) func_call -> . INTP LPAREN expr RPAREN
    (36) func_call -> . LISTP LPAREN expr RPAREN

    LSQUARE         shift and go to state 12
    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 13
    IDENT           shift and go to state 16
    CONS            shift and go to state 11
    CAR             shift and go to state 14
    CDR             shift and go to state 24
    NULLP           shift and go to state 17
    INTP            shift and go to state 18
    LISTP           shift and go to state 23

    func_call                      shift and go to state 15
    term                           shift and go to state 20
    expr                           shift and go to state 49
    list                           shift and go to state 22
    d_ident                        shift and go to state 25
    fact                           shift and go to state 26

state 31

    (25) list -> LSQUARE sequence . RSQUARE

    RSQUARE         shift and go to state 50


state 32

    (26) list -> LSQUARE RSQUARE .

    PLUS            reduce using rule 26 (list -> LSQUARE RSQUARE .)
    MINUS           reduce using rule 26 (list -> LSQUARE RSQUARE .)
    CONCAT          reduce using rule 26 (list -> LSQUARE RSQUARE .)
    SEMICOLON       reduce using rule 26 (list -> LSQUARE RSQUARE .)
    $end            reduce using rule 26 (list -> LSQUARE RSQUARE .)
    OD              reduce using rule 26 (list -> LSQUARE RSQUARE .)
    ELSE            reduce using rule 26 (list -> LSQUARE RSQUARE .)
    FI              reduce using rule 26 (list -> LSQUARE RSQUARE .)
    THEN            reduce using rule 26 (list -> LSQUARE RSQUARE .)
    DO              reduce using rule 26 (list -> LSQUARE RSQUARE .)
    COMMA           reduce using rule 26 (list -> LSQUARE RSQUARE .)
    RSQUARE         reduce using rule 26 (list -> LSQUARE RSQUARE .)
    RPAREN          reduce using rule 26 (list -> LSQUARE RSQUARE .)


state 33

    (27) sequence -> list_element . COMMA sequence
    (28) sequence -> list_element .

    COMMA           shift and go to state 51
    RSQUARE         reduce using rule 28 (sequence -> list_element .)


state 34

    (29) list_element -> expr .
    (7) expr -> expr . PLUS term
    (8) expr -> expr . MINUS term
    (23) expr -> expr . CONCAT list
    (24) expr -> expr . CONCAT d_ident
